--- a/tool_presentation.ipynb
+++ b/tool_presentation.ipynb
@@ -15,20 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-11-17 17:12:19.397866: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2021-11-17 17:12:19.397898: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import glob\n",
+    "import pickle\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import langid\n",
@@ -60,34 +52,6 @@
     "\n",
     "![img02](./img/emb01.png)\n",
     "![img03](./img/emb02.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# SentenceTransformers\n",
-    "\n",
-    "SentenceTransformers is a Python framework for state-of-the-art sentence, text and image embeddings. The initial work is described in our paper Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1.88 s, sys: 649 ms, total: 2.53 s\n",
-      "Wall time: 12.3 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "model = SentenceTransformer('all-mpnet-base-v2')"
    ]
   },
   {
@@ -793,6 +757,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# SentenceTransformers\n",
+    "\n",
+    "SentenceTransformers is a Python framework for state-of-the-art sentence, text and image embeddings. The initial work is described in our paper Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.88 s, sys: 649 ms, total: 2.53 s\n",
+      "Wall time: 12.3 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "model = SentenceTransformer('all-mpnet-base-v2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading...\n",
+      "Embedding.shape: (86025, 768)\n",
+      "CPU times: user 10.5 ms, sys: 207 ms, total: 218 ms\n",
+      "Wall time: 223 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "embedding_cache = './data/embedding_cache.pkl'\n",
+    "\n",
+    "if not os.path.exists(embedding_cache):\n",
+    "    df = pd.read_pickle(f'{data_path}/data_pre.pkl')\n",
+    "    print('Encoding... coffee time!')\n",
+    "    sentences = [df.originalTitle[x] for x in range(df.shape[0])]\n",
+    "    sentence_embeddings = model.encode(sentences)\n",
+    "    sentence_embeddings = np.asarray(sentence_embeddings.astype('float32'))\n",
+    "\n",
+    "    print('Saving...')\n",
+    "    with open(embedding_cache, 'wb') as f:\n",
+    "        pickle.dump(sentence_embeddings, f)\n",
+    "\n",
+    "else:\n",
+    "    print('Loading...')\n",
+    "    with open(embedding_cache, 'rb') as f:\n",
+    "        sentence_embeddings = pickle.load(f)\n",
+    "    print('Embedding.shape: {}'.format(sentence_embeddings.shape))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Faiss (Gerando o index)\n",
     "\n",
     "Facebook AI Similarity Search (Faiss), permite uma busca eficiente por similaridade. Dado um conjunto de vetores, podemos indexá-los usando Faiss - então usando outro vetor (o vetor de consulta ), procuramos os vetores mais semelhantes dentro do índice. O Faiss não apenas permite construir um índice e pesquisar, mas também acelera tempos de pesquisa a níveis melhores de desempenho por neio do uso da GPU.\n",
@@ -802,56 +832,6 @@
     "\n",
     "- IndexFlatL2 usa a distancia Euclediana;\n",
     "- IndexFlatIP utiliza o produto da distancia."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_pickle(f'{data_path}/data_pre.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 10min 20s, sys: 4.84 s, total: 10min 25s\n",
-      "Wall time: 10min 25s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "sentences = [df.originalTitle[x] for x in range(df.shape[0])]\n",
-    "sentence_embeddings = model.encode(sentences)\n",
-    "sentence_embeddings = np.asarray(sentence_embeddings.astype('float32'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(86025, 768)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sentence_embeddings.shape"
    ]
   },
   {
@@ -1007,58 +987,6 @@
     "#query = \"Space Fights with no sound\"\n",
     "query = input()\n",
     "search(query)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Validação"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<faiss.swigfaiss.IndexIDMap; proxy of <Swig Object of type 'faiss::IndexIDMapTemplate< faiss::Index > *' at 0x7f7294578de0> >"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "index = faiss.read_index(f'{data_path}/sentences.index')\n",
-    "index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'I' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_22685/3725397367.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mvecs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m768\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mI\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mvecs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreconstruct\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'I' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "vecs = np.zeros((5, 768))\n",
-    "\n",
-    "for i, val in enumerate(I[0].tolist()):\n",
-    "    vecs[i, :] = index.reconstruct(val)"
    ]
   }
  ],
