--- a/tool_presentation.ipynb
+++ b/tool_presentation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,8 @@
     "import langid\n",
     "import faiss\n",
     "from sentence_transformers import SentenceTransformer\n",
+    "#import matplotlib.pyplot as plt\n",
+    "#from sklearn.cluster import KMeans\n",
     "\n",
     "data_path = \"./data\""
    ]
@@ -300,7 +302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pre Processamento"
+    "# Pré-Processamento"
    ]
   },
   {
@@ -520,9 +522,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ## Detectando a língua do título\n",
+    " ##  Removendo títulos que não estão em inglês com o langID\n",
     "\n",
-    " Removendo títulos que não estão em inglês"
+    " - LangID, standalone Language Identification\n",
+    " - Pre-treinado com 97 linguagens.\n",
+    "\n",
+    " > langid.py is trained over a naive Bayes clas-siﬁer with a multinomial event model (McCallumand Nigam, 1998), over a mixture of byte n-grams(1≤n≤4). One key difference from conventionaltext categorization solutions is that langid.py was designed to be used off-the-shelf.\n",
+    "\n",
+    " [https://www.researchgate.net/publication/262370471_Langidpy_An_off-the-shelf_language_identification_tool](https://www.researchgate.net/publication/262370471_Langidpy_An_off-the-shelf_language_identification_tool)"
    ]
   },
   {
@@ -764,26 +771,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.88 s, sys: 649 ms, total: 2.53 s\n",
-      "Wall time: 12.3 s\n"
+      "CPU times: user 2.17 s, sys: 725 ms, total: 2.9 s\n",
+      "Wall time: 14 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "model = SentenceTransformer('all-mpnet-base-v2')"
+    "model = SentenceTransformer('all-mpnet-base-v2')\n",
+    "#model = SentenceTransformer('all-MiniLM-L6-v2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -792,14 +800,14 @@
      "text": [
       "Loading...\n",
       "Embedding.shape: (86025, 768)\n",
-      "CPU times: user 10.5 ms, sys: 207 ms, total: 218 ms\n",
-      "Wall time: 223 ms\n"
+      "CPU times: user 0 ns, sys: 850 ms, total: 850 ms\n",
+      "Wall time: 1.69 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "embedding_cache = './data/embedding_cache.pkl'\n",
+    "embedding_cache = f'{data_path}/embedding_cache.pkl'\n",
     "\n",
     "if not os.path.exists(embedding_cache):\n",
     "    df = pd.read_pickle(f'{data_path}/data_pre.pkl')\n",
@@ -807,6 +815,7 @@
     "    sentences = [df.originalTitle[x] for x in range(df.shape[0])]\n",
     "    sentence_embeddings = model.encode(sentences)\n",
     "    sentence_embeddings = np.asarray(sentence_embeddings.astype('float32'))\n",
+    "    print('Embedding.shape: {}'.format(sentence_embeddings.shape))\n",
     "\n",
     "    print('Saving...')\n",
     "    with open(embedding_cache, 'wb') as f:\n",
@@ -836,18 +845,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading...\n",
+      "CPU times: user 24 ms, sys: 293 ms, total: 317 ms\n",
+      "Wall time: 324 ms\n"
+     ]
+    }
+   ],
    "source": [
-    "def generate_index():\n",
+    "%%time\n",
+    "index_cache = f'{data_path}/sentences.index'\n",
+    "d = sentence_embeddings.shape[1] #768 all-mpnet-base-v2\n",
+    "\n",
+    "def generate_index(data):\n",
     "    index = faiss.IndexIDMap(faiss.IndexFlatIP(768))\n",
     "    ids = np.array(range(0, len(data)))\n",
     "    ids = np.asarray(ids.astype('int64'))\n",
     "    index.add_with_ids(sentence_embeddings, ids)\n",
-    "    faiss.write_index(index, f'{data_path}/sentences.index')\n",
+    "    print('Saving... coffee time!')\n",
+    "    faiss.write_index(index, index_cache)\n",
     "\n",
-    "generate_index()"
+    "if not os.path.exists(index_cache):\n",
+    "    generate_index(df)\n",
+    "\n",
+    "else:\n",
+    "    print('Loading...')\n",
+    "    index = faiss.read_index(index_cache)"
    ]
   },
   {
@@ -859,12 +888,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "def search(query):\n",
-    "    index = faiss.read_index(f'{data_path}/sentences.index')\n",
     "    query_vector = model.encode([query])\n",
     "    k = 5\n",
     "    top_k = index.search(query_vector, k)\n",
@@ -874,9 +902,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "search: Space Fights with no sound\n",
+      "CPU times: user 161 ms, sys: 3.61 ms, total: 164 ms\n",
+      "Wall time: 159 ms\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -909,76 +946,76 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5053</th>\n",
-       "      <td>tt15156420</td>\n",
+       "      <th>47639</th>\n",
+       "      <td>tt7174122</td>\n",
        "      <td>movie</td>\n",
-       "      <td>Space</td>\n",
-       "      <td>Space</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Mystery</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13362</th>\n",
-       "      <td>tt1858536</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>Space</td>\n",
-       "      <td>Space</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>82</td>\n",
-       "      <td>Comedy,Drama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31272</th>\n",
-       "      <td>tt8710832</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>Space</td>\n",
-       "      <td>Space</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>93</td>\n",
-       "      <td>Horror,Sci-Fi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26305</th>\n",
-       "      <td>tt7673996</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>The Space</td>\n",
-       "      <td>The Space</td>\n",
+       "      <td>Violent Space</td>\n",
+       "      <td>Violent Space</td>\n",
        "      <td>2018</td>\n",
-       "      <td>70</td>\n",
+       "      <td>83</td>\n",
+       "      <td>Thriller</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72844</th>\n",
+       "      <td>tt4782322</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>Fighting the Sky</td>\n",
+       "      <td>Fighting the Sky</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>97</td>\n",
+       "      <td>Action,Sci-Fi,Thriller</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20555</th>\n",
+       "      <td>tt2328745</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>Space Warriors</td>\n",
+       "      <td>Space Warriors</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>93</td>\n",
+       "      <td>Adventure,Family</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1791</th>\n",
+       "      <td>tt14371272</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>Sound and Silence</td>\n",
+       "      <td>Sound and Silence</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Drama</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>79005</th>\n",
-       "      <td>tt10613176</td>\n",
+       "      <th>44337</th>\n",
+       "      <td>tt6543082</td>\n",
        "      <td>movie</td>\n",
-       "      <td>Space Baby</td>\n",
-       "      <td>Space Baby</td>\n",
-       "      <td>2021</td>\n",
+       "      <td>Space Race</td>\n",
+       "      <td>Space Race</td>\n",
+       "      <td>2013</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Family,Fantasy,Sci-Fi</td>\n",
+       "      <td>Animation</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           tconst titleType primaryTitle originalTitle  startYear  \\\n",
-       "5053   tt15156420     movie        Space         Space       2016   \n",
-       "13362   tt1858536     movie        Space         Space       2011   \n",
-       "31272   tt8710832     movie        Space         Space       2020   \n",
-       "26305   tt7673996     movie    The Space     The Space       2018   \n",
-       "79005  tt10613176     movie   Space Baby    Space Baby       2021   \n",
+       "           tconst titleType       primaryTitle      originalTitle  startYear  \\\n",
+       "47639   tt7174122     movie      Violent Space      Violent Space       2018   \n",
+       "72844   tt4782322     movie   Fighting the Sky   Fighting the Sky       2018   \n",
+       "20555   tt2328745     movie     Space Warriors     Space Warriors       2013   \n",
+       "1791   tt14371272     movie  Sound and Silence  Sound and Silence       2020   \n",
+       "44337   tt6543082     movie         Space Race         Space Race       2013   \n",
        "\n",
-       "      runtimeMinutes                 genres  \n",
-       "5053             NaN                Mystery  \n",
-       "13362             82           Comedy,Drama  \n",
-       "31272             93          Horror,Sci-Fi  \n",
-       "26305             70                  Drama  \n",
-       "79005            NaN  Family,Fantasy,Sci-Fi  "
+       "      runtimeMinutes                  genres  \n",
+       "47639             83                Thriller  \n",
+       "72844             97  Action,Sci-Fi,Thriller  \n",
+       "20555             93        Adventure,Family  \n",
+       "1791             NaN                   Drama  \n",
+       "44337            NaN               Animation  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -986,7 +1023,27 @@
    "source": [
     "#query = \"Space Fights with no sound\"\n",
     "query = input()\n",
-    "search(query)"
+    "print('search: {}'.format(query))\n",
+    "%time search(query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# K-Means Clusters Plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_clusters = 5\n",
+    "clustering_model = KMeans(n_clusters=num_clusters)\n",
+    "clustering_model.fit(sentence_embeddings)\n",
+    "cluster_assignment = clustering_model.labels_"
    ]
   }
  ],
