--- a/tool_presentation.ipynb
+++ b/tool_presentation.ipynb
@@ -287,7 +287,7 @@
     }
    ],
    "source": [
-    "data_files = glob.glob(f'{data_path}/*.pkl')\n",
+    "data_files = glob.glob('./dataset/*.pkl')\n",
     "li = []\n",
     "\n",
     "for filename in data_files:\n",
@@ -864,7 +864,7 @@
     "d = sentence_embeddings.shape[1] #768 all-mpnet-base-v2\n",
     "\n",
     "def generate_index(data):\n",
-    "    index = faiss.IndexIDMap(faiss.IndexFlatIP(768))\n",
+    "    index = faiss.IndexIDMap(faiss.IndexFlatIP(d))\n",
     "    ids = np.array(range(0, len(data)))\n",
     "    ids = np.asarray(ids.astype('int64'))\n",
     "    index.add_with_ids(sentence_embeddings, ids)\n",
@@ -893,8 +893,8 @@
    "outputs": [],
    "source": [
     "def search(query):\n",
-    "    query_vector = model.encode([query])\n",
     "    k = 5\n",
+    "    query_vector = model.encode([query])\n",
     "    top_k = index.search(query_vector, k)\n",
     "    results = top_k[1].tolist()[0]\n",
     "    return df.iloc[results]"
@@ -902,16 +902,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "search: Space Fights with no sound\n",
-      "CPU times: user 161 ms, sys: 3.61 ms, total: 164 ms\n",
-      "Wall time: 159 ms\n"
+      "search: hammer battle superhero\n",
+      "CPU times: user 222 ms, sys: 7.07 ms, total: 229 ms\n",
+      "Wall time: 289 ms\n"
      ]
     },
     {
@@ -946,76 +946,76 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>47639</th>\n",
-       "      <td>tt7174122</td>\n",
+       "      <th>18430</th>\n",
+       "      <td>tt2193418</td>\n",
        "      <td>movie</td>\n",
-       "      <td>Violent Space</td>\n",
-       "      <td>Violent Space</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>83</td>\n",
-       "      <td>Thriller</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>72844</th>\n",
-       "      <td>tt4782322</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>Fighting the Sky</td>\n",
-       "      <td>Fighting the Sky</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>97</td>\n",
-       "      <td>Action,Sci-Fi,Thriller</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20555</th>\n",
-       "      <td>tt2328745</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>Space Warriors</td>\n",
-       "      <td>Space Warriors</td>\n",
+       "      <td>Hammer of the Gods</td>\n",
+       "      <td>Hammer of the Gods</td>\n",
        "      <td>2013</td>\n",
-       "      <td>93</td>\n",
-       "      <td>Adventure,Family</td>\n",
+       "      <td>99</td>\n",
+       "      <td>Action,History,Horror</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1791</th>\n",
-       "      <td>tt14371272</td>\n",
+       "      <th>45882</th>\n",
+       "      <td>tt6853934</td>\n",
        "      <td>movie</td>\n",
-       "      <td>Sound and Silence</td>\n",
-       "      <td>Sound and Silence</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Hammer</td>\n",
+       "      <td>Hammer</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>82</td>\n",
+       "      <td>Crime,Drama,Thriller</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22850</th>\n",
+       "      <td>tt2479650</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>The Wolfman's Hammer</td>\n",
+       "      <td>The Wolfman's Hammer</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>64</td>\n",
        "      <td>Drama</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>44337</th>\n",
-       "      <td>tt6543082</td>\n",
+       "      <th>17810</th>\n",
+       "      <td>tt2153891</td>\n",
        "      <td>movie</td>\n",
-       "      <td>Space Race</td>\n",
-       "      <td>Space Race</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Animation</td>\n",
+       "      <td>Metal Warrior</td>\n",
+       "      <td>Metal Warrior</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Musical</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68291</th>\n",
+       "      <td>tt4094144</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>The Strongest Man</td>\n",
+       "      <td>The Strongest Man</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>99</td>\n",
+       "      <td>Comedy</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           tconst titleType       primaryTitle      originalTitle  startYear  \\\n",
-       "47639   tt7174122     movie      Violent Space      Violent Space       2018   \n",
-       "72844   tt4782322     movie   Fighting the Sky   Fighting the Sky       2018   \n",
-       "20555   tt2328745     movie     Space Warriors     Space Warriors       2013   \n",
-       "1791   tt14371272     movie  Sound and Silence  Sound and Silence       2020   \n",
-       "44337   tt6543082     movie         Space Race         Space Race       2013   \n",
+       "          tconst titleType          primaryTitle         originalTitle  \\\n",
+       "18430  tt2193418     movie    Hammer of the Gods    Hammer of the Gods   \n",
+       "45882  tt6853934     movie                Hammer                Hammer   \n",
+       "22850  tt2479650     movie  The Wolfman's Hammer  The Wolfman's Hammer   \n",
+       "17810  tt2153891     movie         Metal Warrior         Metal Warrior   \n",
+       "68291  tt4094144     movie     The Strongest Man     The Strongest Man   \n",
        "\n",
-       "      runtimeMinutes                  genres  \n",
-       "47639             83                Thriller  \n",
-       "72844             97  Action,Sci-Fi,Thriller  \n",
-       "20555             93        Adventure,Family  \n",
-       "1791             NaN                   Drama  \n",
-       "44337            NaN               Animation  "
+       "       startYear runtimeMinutes                 genres  \n",
+       "18430       2013             99  Action,History,Horror  \n",
+       "45882       2019             82   Crime,Drama,Thriller  \n",
+       "22850       2011             64                  Drama  \n",
+       "17810       2011            100                Musical  \n",
+       "68291       2015             99                 Comedy  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
