--- a/tool_presentation.ipynb
+++ b/tool_presentation.ipynb
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,6 +1044,20 @@
     "clustering_model = KMeans(n_clusters=num_clusters)\n",
     "clustering_model.fit(sentence_embeddings)\n",
     "cluster_assignment = clustering_model.labels_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Considerações Finais\n",
+    "\n",
+    "- Faiss permite uma busca eficiente por similaridade.\n",
+    "- Faiss não apenas nos permite construir um índice e pesquisar - mas também acelera os tempos de pesquisa a níveis de desempenho absurdos.\n",
+    "- Faiss vem com otimização de GPU embutida para qualquer máquina Linux habilitada para CUDA.\n",
+    "MacOS ou Windows? Bem, temos menos sorte.\n",
+    "- IndexFlatL2 mede a distância L2 (ou euclidiana) entre todos os pontos dados entre nosso vetor de consulta e os vetores carregados no índice. É simples, muito preciso, mas não muito rápido.\n",
+    "- O Faiss nos permite adicionar várias etapas que podem otimizar nossa pesquisa usando muitos métodos diferentes. Uma abordagem popular é particionar o índice em células de Voronoi."
    ]
   }
  ],
