--- a/tool_presentation.ipynb
+++ b/tool_presentation.ipynb
@@ -1057,7 +1057,12 @@
     "- Faiss vem com otimização de GPU embutida para qualquer máquina Linux habilitada para CUDA.\n",
     "MacOS ou Windows? Bem, temos menos sorte.\n",
     "- IndexFlatL2 mede a distância L2 (ou euclidiana) entre todos os pontos dados entre nosso vetor de consulta e os vetores carregados no índice. É simples, muito preciso, mas não muito rápido.\n",
-    "- O Faiss nos permite adicionar várias etapas que podem otimizar nossa pesquisa usando muitos métodos diferentes. Uma abordagem popular é particionar o índice em células de Voronoi."
+    "- O Faiss nos permite adicionar várias etapas que podem otimizar nossa pesquisa usando muitos métodos diferentes. Uma abordagem popular é particionar o índice em células de Voronoi.\n",
+    "\n",
+    "![img01](./img/per01.png)\n",
+    "![img02](./img/per02.png)\n",
+    "![img03](./img/per03.png)\n",
+    "![img04](./img/voro.png)"
    ]
   }
  ],
