--- a/tp/tp.ipynb
+++ b/tp/tp.ipynb
@@ -32,6 +32,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Introdução\n",
+    "\n",
+    "Classificar e reconhecer certos tipos de dados vem sendo exigida em diversas aplicações modernas e, principalmente, onde o Big Data é usado para tomar todos os tipos de decisões. As tarefas de classificação também permitem que pesquisadores consigam lidar com a grande quantidade de dados as quais têm acesso.\n",
+    "\n",
+    "## Diferentes formas de classificar\n",
+    "\n",
+    "Classificação é simplesmente agrupar as coisas de acordo com características e atributos (features) semelhantes. Dentro do Aprendizado de Máquina, ela não é diferente. A classificação faz parte de uma subárea chamada Aprendizado de Máquina Supervisionado, em que dados são agrupados com base em características predeterminadas.\n",
+    "\n",
+    "Um problema de classificação requer que os dados sejam classificados em duas ou mais classes. Se o problema possui duas classes, ele é chamado de problema de classificação binário, e se possui mais de duas classes, é chamado de problema de classificação multi-class (multiclasse). Um exemplo de um problema de classificação binário seria você escolher comprar ou não um item da livraria (1 para “livro comprado” e 0 para “livro não comprado”).\n",
+    "\n",
+    "O foco deste trabalho está em um variação da classificação multi-class: a classificação multi-label, em que um dado pode pertencer a várias classes diferentes.\n",
+    "\n",
+    "| X  | Binary | Multi-class | Multi-label |\n",
+    "|:--:|:--:|:--:|:--:|\n",
+    "| X₁ | t₁ | t₂ | [t₂,t₅] |\n",
+    "| X₂ | t₂ | t₃ | [t₁,t₂,t₃,t₄] |\n",
+    "| X₃ | t₁ | t₄ | [t₃] |\n",
+    "| X₄ | t₂ | t₁ | [t₂,t₄] |\n",
+    "| X₅ | t₁ | t₃ | [t₁t₃,t₄] |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Dataframe"
    ]
   },
